heart_animation.html

--- a/cgv/pub/Phototicket_completed.html
+++ b/cgv/pub/Phototicket_completed.html
@@ -75,7 +75,6 @@
 <body class="bg_white">
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
 <div class="wrap">
-<!--    <img src="../images/phototicket/temp/completed.png" width="375" style="position: absolute; z-index:10; top: -20px; opacity: .5" alt="">-->
     <!--
       날짜 : 2020.04.24
       작성자 : 이주연
@@ -105,7 +104,7 @@
         <nav id="navMain" class="type_pt" style="position: static; top: initial;">
             <div class="inner">
                 <a class="_tab" href="javascript:void(0);" onclick="" id="">제작완료(10)</a>
-                <a class="_tab" href="javascript:void(0);" onclick="" id="">출력완료(3)</a>
+                <a class="_tab active" href="javascript:void(0);" onclick="" id="">출력완료(3)</a>
                 <a class="icon_search" href="javascript:void(0);" onclick="" id=""><i class="sprite sprite-pt sprite-icFilterDate"></i>기간검색</a>
             </div>
         </nav>
@@ -276,8 +275,6 @@
                         <p class="dday">D-20</p>
                         <p class="txt">출력가능일</p>
                     </div>
-                </a>
-                <a class="btn_grey" href="javascript:void(0);">더보기 <i class="sprite sprite-pt sprite-icDownMore"></i>
                 </a>
             </div>
         </article>
