--- a/cgv/pub/Phototicket_myticket_boast.html
+++ b/cgv/pub/Phototicket_myticket_boast.html
@@ -74,6 +74,7 @@
     <!--  [E] 2020.04.20	-->
 </head>
 <body class="bg_white">
+<!--<img src="../images/phototicket/temp/boast.png" width="375" style="position: absolute; z-index:10; top: -20px; opacity: .5" alt="">-->
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
 <div class="wrap">
     <!--
@@ -172,18 +173,10 @@
 
         <!--  [S] 포토티켓 자랑하기    -->
         <article class="ptboast_wrap">
-            <div class="title_wrap">
-                <div class="title">
-                    포토티켓 자랑하기<a class="badge" href="javascript:void(0);">내 포토티켓 자랑</a>
-                </div>
-                <div class="all">
-                    <a class="btn-all" href="javascript:void(0);">전체보기 <i class="sprite sprite-pt sprite-icTMore"></i></a>
-                </div>
-            </div>
             <div class="imgcard_wrap">
                 <div class="row">
                     <div class="col">
-                        <div class="card" onclick="location.href='../pub/Phototicket_popup_kakao.html'">
+                        <div class="card" onclick="location.href='../pub/Phototicket_FlipSlider_type2.html'">
                             <div class="img">
                                 <img src="../images/phototicket/main/boast1@2x.png" alt="자랑한 이미지">
                             </div>
