--- a/cgv/pub/Phototicket_printed_completed.html
+++ b/cgv/pub/Phototicket_printed_completed.html
@@ -60,14 +60,13 @@
     <meta property="al:android:package" content="com.cgv.android.movieapp">
     <meta property="al:android:app_name" content="CGV">
     <!-- [E] 운영소스 상속용 -->
-
 </head>
 <body class="bg_white">
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
 <div class="wrap">
-
     <!-- [S] Content -->
     <section class="content_wrap container photo_ticket" id="ContainerView">
+        <!--  todo! popup 처리    -->
         <div class="pop_header">
             <a class="btn_share" href="javascript:void(0);">
                 <i class="sprite sprite-pt sprite-icShare"></i>
@@ -78,22 +77,22 @@
              내용 :  클래스 badge_blue / badge_red 두 타입
              -->
             <div>
-                <p class="badge badge_blue">
-                    <span class="dday">D-20</span><span class="text">출력가능일 4월 14일까지</span>
+                <p class="badge badge_grey">
+                    <span class="dday">출력일</span><span class="text">2020.04.10(일)</span>
                 </p>
             </div>
-            <a class="btn_close btnPopClose" href="javascript:void(0);">
-                <i class="sprite sprite-pt sprite-icClose"></i>
-            </a>
+                <a class="btn_close btnPopClose" href="javascript:void(0);">
+                    <i class="sprite sprite-pt sprite-icClose"></i>
+                </a>
         </div>
         <!-- [S] 플립 슬라이더 -->
-        <!-- myPhtoticketFlip-small 분기 처리 필요 -->
-        <article class="myPhtoticketFlip myPhtoticketFlip-small">
+        <!-- tip 클래스 유무, 분기 처리 필요 -->
+        <article class="myPhtoticketFlip">
             <div class="title_area">
-                <span class="title">다크워터스(2D)</span>
-                <span class="title-sm">예매번호 : 001-0000-0000-002</span>
+                <!-- title 단독 사용시, title-single 사용  -->
+                <span class="title title-single">다크워터스(2D)</span>
                 <!-- 광주충장로 점일 때 -->
-                 <span class="tip">CGV광주충장로 점에서만 출력가능합니다.</span>
+                <!-- <span class="tip">CGV광주충장로 점에서만 출력가능합니다.</span>-->
             </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
@@ -103,7 +102,7 @@
                                 <div class="front">
                                     <div class="dim"></div>
                                     <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
+                                        <img src="../images/phototicket/main/sample.png"
                                              alt="">
                                         <label>
                                             <input value="1" name="group1" type='checkbox'/>
@@ -146,12 +145,12 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="flip-container">
+                        <div class="flip-container active">
                             <div class="flipper">
                                 <div class="front">
                                     <div class="dim"></div>
                                     <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
+                                        <img src="../images/phototicket/main/sample.png"
                                              alt="">
                                         <label>
                                             <input value="1" name="group2" type='checkbox'/>
@@ -199,7 +198,7 @@
                                 <div class="front">
                                     <div class="dim"></div>
                                     <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
+                                        <img src="../images/phototicket/main/sample.png"
                                              alt="">
                                         <label>
                                             <input value="1" name="group3" type='checkbox'/>
@@ -245,14 +244,13 @@
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
-            <div class="btn_area">
+            <div class="btn_area btn_area_sm">
                 <div class="inner">
-                    <p class="text-lg">포토티켓 제작이 완료되었습니다.</p>
-                    <p class="text-sm">티켓판매기에서 예매번호 혹은<br/>
-                        생년월일+휴대폰번호를 입력하여 출력해주세요</p>
+                    <p class="text-lg">출력이 완료된 포토티켓입니다.</p>
+                    <p class="text-sm">이미 출력된 카드는 재출력이 불가합니다.</p>
                     <div>
-                        <a class="btn-red" href="javascript:void(0);">자랑하기</a> <!-- btn-red/btn-ouline-red 2type -->
-                        <a class="btn-grey" href="javascript:void(0);">결제취소</a>
+                        <a class="btn-red" href="javascript:void(0);">자랑하기</a>
+                        <a class="btn-grey" href="javascript:void(0);">삭제하기</a>
                     </div>
                 </div>
             </div>
@@ -265,46 +263,13 @@
     작성자 : 이주연
     내용 : 포토티켓 추가
     -->
+<script> var screenId = "PT003";</script>
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="../js/swiper.min.js"></script>
 <script type="text/javascript" src="../js/phototicket.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
 <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
-<script>
-    var flipPhotoTicketSlider = new Swiper('.swiper-container', {
-        speed: 400,
-        autoHeight: false,
-        direction: 'horizontal',
-        loop: false,
-        spaceBetween: 5,
-        slidesPerView: 1,
-        centeredSlides: true,
-        breakpointsInverse: false,
-        roundLengths: false,
-        pagination: {
-            el: '.swiper-pagination',
-        },
-        on: {
-            init: function () {
-                var nWindowWidth = $(window).width();
-                var nPadding = (nWindowWidth - 290) /2
-                setTimeout(function () {
-                    $('.myPhtoticketFlip .swiper-container')
-                        .css({
-                            'width': '100%',
-                            'margin': '0 auto',
-                            'padding-left': nPadding
-                        })
-                }, 100)
-            },
-        }
-    });
-    flipPhotoTicketSlider.translateTo(0, 500, true, true);
-    $(window).resize(function () {
-        location.reload();
-    });
-</script>
 <!--  [E] 2020.04.20	-->
 </body>
 </html>
