--- a/cgv/pub/phototicket_alert_04.html
+++ b/cgv/pub/phototicket_alert_04.html
@@ -147,10 +147,9 @@
 		<div id="pop_alert" class="popup_dim popAlert active">   <!-- 팝업 활성화 addClass('active') -->
 			<div class="popup">
 				<div class="popup_container">
-					<p class="alert_txt">포토티켓 이미지를 삭제하시겠습니까?<br/>
-						<span class="primary">제작된 포토티켓은 복구가 불가합니다.</span></p>
+					<p class="alert_txt">포토티켓 취소가 완료되었습니다.<br/>
+						다시 포토티켓을 만들기가 가능합니다.</p>
 					<div class="btn_flexBox">
-						<a href="#" class="com_btn_full_action">취소</a>
 						<a href="#" class="com_btn_full_action">확인</a>
 					</div>
 				</div>
