--- a/cgv/pub/phototicket_index.html
+++ b/cgv/pub/phototicket_index.html
@@ -126,20 +126,20 @@
 	                <td>포토티켓 </td>
 	                <td>포토티켓-메인(데이터가 없을 경우)</td>
 	                <td class="filelink"><a href="./Phototicket_main_no.html" title="새창열림" target="_blank">./Phototicket_main_no.html</a></td>
-	                <td class="hidden-phone">작업중</td>
+	                <td class="hidden-phone">완료</td>
 	                <td class="hidden-phone">무비차트 script 적용 필요(20.04.22)</td>
 	            </tr>
                 <tr>
 	                <td class="no hidden-phone"><!-- 번호 --></td>
-	                <td>포토티켓 </td>
+	                <td>팝업</td>
 	                <td>공유하기 팝업</td>
-	                <td class="filelink"><a href="./Phototicket_popup_kakao.html" title="새창열림" target="_blank">./Phototicket_popup_kakao.html</a></td>
+	                <td class="filelink"><a href="./Phototicket_popup_share.html" title="새창열림" target="_blank">./Phototicket_popup_share.html</a></td>
 	                <td class="hidden-phone">완료</td>
 	                <td class="hidden-phone"></td>
 	            </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓 </td>
+					 <td>팝업</td>
 					 <td>조회기간 팝업</td>
 					 <td class="filelink"><a href="./Phototicket_popup_search.html" title="새창열림" target="_blank">./Phototicket_popup_search.html</a></td>
 					 <td class="hidden-phone">완료</td>
@@ -147,7 +147,7 @@
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓 </td>
+					 <td>포토티켓_상세</td>
 					 <td>제작완료</td>
 					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
 					 <td class="hidden-phone">완료</td>
@@ -155,7 +155,23 @@
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓</td>
+					 <td>포토티켓_상세</td>
+					 <td>제작완료-자랑취소</td>
+					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓_상세</td>
+					 <td>제작완료-CGV광주충장로</td>
+					 <td class="filelink"><a href="./Phototicket_FlipSlider_small.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_small.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓_상세</td>
 					 <td>출력완료</td>
 					 <td class="filelink"><a href="./Phototicket_printed.html" title="새창열림" target="_blank">./Phototicket_printed.html</a></td>
 					 <td class="hidden-phone">완료</td>
@@ -163,27 +179,67 @@
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓</td>
+					 <td>포토티켓_상세</td>
 					 <td>포토티켓 자랑하기</td>
 					 <td class="filelink"><a href="./Phototicket_myticket_boast.html" title="새창열림" target="_blank">./Phototicket_myticket_boast.html</a></td>
 					 <td class="hidden-phone">완료</td>
-					 <td class="hidden-phone"></td>
+					 <td class="hidden-phone">버튼 클릭시 SVG애니메이션 추가 작업 필요(20.04.24)</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓 </td>
-					 <td>제작완료_자랑취소 A/뒷면</td>
-					 <td class="filelink"><a href="Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_completed_boast.html</a></td>
+					 <td>포토티켓_상세</td>
+					 <td>제작완료</td>
+					 <td class="filelink"><a href="Phototicket_FlipSlider_type2.html" title="새창열림" target="_blank">./Phototicket_FlipSlider_type2.html</a></td>
 					 <td class="hidden-phone">진행중</td>
-					 <td class="hidden-phone"></td>
+					 <td class="hidden-phone">버튼 클릭시 SVG애니메이션 추가 작업 필요(20.04.24)</td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓자랑하기_상세</td>
+					 <td>포토티켓_상세</td>
 					 <td>내가 자랑한 포토티켓/다른 사람이 자랑한 포토티켓 popup</td>
 					 <td class="filelink"><a href="./Phototicket_after_recommend.html" title="새창열림" target="_blank">./Phototicket_after_recommend.html</a></td>
 					 <td class="hidden-phone">완료</td>
 					 <td class="hidden-phone">버튼 클릭시 SVG애니메이션 추가 작업 필요(20.04.24)</td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>alert</td>
+					 <td>팝업 01_자랑하기</td>
+					 <td class="filelink"><a href="./phototicket_alert_01.html" title="새창열림" target="_blank">./phototicket_alert_01.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>alert</td>
+					 <td>팝업 02_자랑하기(업로드완료)</td>
+					 <td class="filelink"><a href="./phototicket_alert_02.html" title="새창열림" target="_blank">./phototicket_alert_02.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>alert</td>
+					 <td>팝업 03_결제취소</td>
+					 <td class="filelink"><a href="./phototicket_alert_03.html" title="새창열림" target="_blank">./phototicket_alert_03.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>alert</td>
+					 <td>팝업 04_결제취소(완료)</td>
+					 <td class="filelink"><a href="./phototicket_alert_04.html" title="새창열림" target="_blank">./phototicket_alert_04.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>alert</td>
+					 <td>팝업 05_삭제하기</td>
+					 <td class="filelink"><a href="./phototicket_alert_05.html" title="새창열림" target="_blank">./phototicket_alert_05.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
 				 </tr>
             </tbody>
         </table>
