--- a/cgv/pub/Phototicket_boast_cancel.html
+++ b/cgv/pub/Phototicket_boast_cancel.html
@@ -68,6 +68,7 @@
 
     <!-- [S] Content -->
     <section class="content_wrap container photo_ticket" id="ContainerView">
+        <!--  todo! popup 처리    -->
         <div class="pop_header">
             <a class="btn_share" href="javascript:void(0);">
                 <i class="sprite sprite-pt sprite-icShare"></i>
@@ -78,24 +79,24 @@
              내용 :  클래스 badge_blue / badge_red 두 타입
              -->
             <div>
-                <p class="badge badge_blue">
-                    <span class="dday">D-20</span><span class="text">출력가능일 4월 14일까지</span>
+                <p class="badge badge-red">
+                    <span class="dday">D-20</span><span class="text">출력가능일 4월 4일까지</span>
                 </p>
             </div>
-            <a class="btn_close btnPopClose" href="javascript:void(0);">
-                <i class="sprite sprite-pt sprite-icClose"></i>
-            </a>
+                <a class="btn_close btnPopClose" href="javascript:void(0);">
+                    <i class="sprite sprite-pt sprite-icClose"></i>
+                </a>
         </div>
         <!-- [S] 플립 슬라이더 -->
-        <!-- myPhtoticketFlip-small 분기 처리 필요 -->
-        <article class="myPhtoticketFlip myPhtoticketFlip-small">
+        <!-- tip 클래스 유무, 분기 처리 필요 -->
+        <article class="myPhtoticketFlip">
             <div class="title_area">
                 <span class="title">다크워터스(2D)</span>
                 <span class="title-sm">예매번호 : 001-0000-0000-002</span>
                 <!-- 광주충장로 점일 때 -->
-                 <span class="tip">CGV광주충장로 점에서만 출력가능합니다.</span>
+                <!-- <span class="tip">CGV광주충장로 점에서만 출력가능합니다.</span>-->
             </div>
-            <div class="swiper-container">
+            <div class="swiper-container ">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="flip-container">
@@ -103,7 +104,7 @@
                                 <div class="front">
                                     <div class="dim"></div>
                                     <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
+                                        <img src="../images/phototicket/main/sample.png"
                                              alt="">
                                         <label>
                                             <input value="1" name="group1" type='checkbox'/>
@@ -145,105 +146,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="flip-container">
-                            <div class="flipper">
-                                <div class="front">
-                                    <div class="dim"></div>
-                                    <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
-                                             alt="">
-                                        <label>
-                                            <input value="1" name="group2" type='checkbox'/>
-                                            <span></span>
-                                        </label>
-                                        <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                    </div>
-                                </div>
-                                <div class="back">
-                                    <div class="inner">
-                                        <p class="title">IMAX 2D(인생영화 기획전)<span class="rating"><i class="icon_rating icon_15"></i></span></p>
-                                        <p class="title_lg">날씨의 아이(인생영화기획전)</p>
-                                        <p class="title_sm">(IMAX 2D) Weathering With You</p>
-                                        <ul class="info">
-                                            <li class="bar"><span>CGV왕십리</span><span>2020. 03. 29(일)</span></li>
-                                            <li class="bar"><span>6회</span><span>21:45(오후) ~ 23:47(오후)</span></li>
-                                            <li>IMAX관</li>
-                                            <li><span>일반 3명</span></li>
-                                        </ul>
-                                        <div class="bg_grey">
-                                            <p class="number">예매번호 : <span>2020-0000-0000-0000</span></p>
-                                            <p class="text">이포토티켓으로는 입장하실 수 없습니다.<br/>
-                                                모바일 티켓 혹은 예매번호로 티켓을 추력 후<br/>
-                                                입장해주세요.</p>
-                                        </div>
-                                        <div class="sign">
-                                            <p class="lg">CURTUREPLEX CGV</p>
-                                            <p class="sm">© CJ CGV. All rights reserved.</p>
-                                        </div>
-                                        <label>
-                                            <input value="1" name="group2" type='checkbox'/>
-                                            <span></span>
-                                        </label>
-                                        <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="flip-container active">
-                            <div class="flipper">
-                                <div class="front">
-                                    <div class="dim"></div>
-                                    <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
-                                             alt="">
-                                        <label>
-                                            <input value="1" name="group3" type='checkbox'/>
-                                            <span></span>
-                                        </label>
-                                        <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                    </div>
-                                </div>
-                                <div class="back">
-                                    <div class="inner">
-                                        <p class="title">IMAX 2D(인생영화 기획전)<span class="rating"><i class="icon_rating icon_19"></i></span></p>
-                                        <p class="title_lg">날씨의 아이(인생영화기획전)</p>
-                                        <p class="title_sm">(IMAX 2D) Weathering With You</p>
-                                        <ul class="info">
-                                            <li class="bar"><span>CGV왕십리</span><span>2020. 03. 29(일)</span></li>
-                                            <li class="bar"><span>6회</span><span>21:45(오후) ~ 23:47(오후)</span></li>
-                                            <li>IMAX관</li>
-                                            <li><span>일반 3명</span></li>
-                                        </ul>
-                                        <div class="bg_grey">
-                                            <p class="number">예매번호 : <span>2020-0000-0000-0000</span></p>
-                                            <p class="text">이포토티켓으로는 입장하실 수 없습니다.<br/>
-                                                모바일 티켓 혹은 예매번호로 티켓을 추력 후<br/>
-                                                입장해주세요.</p>
-                                        </div>
-                                        <div class="sign">
-                                            <p class="lg">CURTUREPLEX CGV</p>
-                                            <p class="sm">© CJ CGV. All rights reserved.</p>
-                                        </div>
-                                        <label>
-                                            <input value="1" name="group3" type='checkbox'/>
-                                            <span></span>
-                                        </label>
-                                        <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                class="sprite sprite-pt sprite-icCardRotation"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- Add Pagination -->
-                <div class="swiper-pagination"></div>
+                <!-- 자랑 취소 페이지에서, pagination 제거 -->
+                <!--  <div class="swiper-pagination"></div>-->
             </div>
             <div class="btn_area">
                 <div class="inner">
@@ -251,7 +156,7 @@
                     <p class="text-sm">티켓판매기에서 예매번호 혹은<br/>
                         생년월일+휴대폰번호를 입력하여 출력해주세요</p>
                     <div>
-                        <a class="btn-red" href="javascript:void(0);">자랑하기</a> <!-- btn-red/btn-ouline-red 2type -->
+                        <a class="btn-outline-red" href="javascript:void(0);">자랑취소</a>
                         <a class="btn-grey" href="javascript:void(0);">결제취소</a>
                     </div>
                 </div>
@@ -267,44 +172,11 @@
     -->
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="../js/swiper.min.js"></script>
+<script> var screenId = "PT003";</script>
 <script type="text/javascript" src="../js/phototicket.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
 <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
-<script>
-    var flipPhotoTicketSlider = new Swiper('.swiper-container', {
-        speed: 400,
-        autoHeight: false,
-        direction: 'horizontal',
-        loop: false,
-        spaceBetween: 5,
-        slidesPerView: 1,
-        centeredSlides: true,
-        breakpointsInverse: false,
-        roundLengths: false,
-        pagination: {
-            el: '.swiper-pagination',
-        },
-        on: {
-            init: function () {
-                var nWindowWidth = $(window).width();
-                var nPadding = (nWindowWidth - 290) /2
-                setTimeout(function () {
-                    $('.myPhtoticketFlip .swiper-container')
-                        .css({
-                            'width': '100%',
-                            'margin': '0 auto',
-                            'padding-left': nPadding
-                        })
-                }, 100)
-            },
-        }
-    });
-    flipPhotoTicketSlider.translateTo(0, 500, true, true);
-    $(window).resize(function () {
-        location.reload();
-    });
-</script>
 <!--  [E] 2020.04.20	-->
 </body>
 </html>
