--- a/cgv/pub/phototicket_index.html
+++ b/cgv/pub/phototicket_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>CGV 스마트영수증</title>
+    <title>CGV 포토티켓</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <style type="text/css">
@@ -79,7 +79,7 @@
 <body>
 
 <div id="g_header">
-    <h1><img src="http://img.cgv.co.kr/WebApp/images/main/@2x/ico_app.png" alt="cgv"> 포토 티켓</h1>
+    <h1><img src="http://img.cgv.co.kr/WebApp/images/main/@2x/ico_app.png" alt="cgv">CGV 포토티켓</h1>
 </div>
 
 <div id="g_body">
