애니메이션

--- a/cgv_phototicket/WebContent/pub/Phototicket_FlipSlider_checkbox.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_FlipSlider_checkbox.html
@@ -88,83 +88,18 @@
                                 <div class="front">
                                     <div class="dim"></div>
                                     <div class="inner">
-                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
-                                             alt="">
-                                        <a class="toggle_btn" onclick="" style="display:inline-block;position: absolute;left: -30px;top: -28px;">
-                                            <svg width="46px" height="46px" viewBox="0 0 133 133" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg" alt="">
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
                                                 <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                    <circle id="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                    <circle id="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
-                                                    <circle id="outline" stroke="#fb4357" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
-                                                    <polyline id="check" stroke="#FFFFFF" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
                                                 </g>
                                             </svg>
-                                            <style>
-                                                @keyframes outline {
-                                                    from {
-                                                        stroke-dasharray: 0, 3.1416 * 55px * 2;
-                                                    }
-                                                    to {
-                                                        stroke-dasharray: 3.1416 * 55px * 2, 3.1416 * 55px * 2;
-                                                    }
-                                                }
-                                                #outline {
-                                                    animation: .38s ease-in outline;
-                                                    transform: rotate(0deg);
-                                                    transform-origin: center;
-                                                }
-
-                                                @keyframes circle {
-                                                    from {
-                                                        transform: scale(1);
-                                                    }
-                                                    to {
-                                                        transform: scale(0);
-                                                    }
-                                                }
-
-                                                #white-circle {
-                                                    animation: .35s ease-in .35s forwards circle;
-                                                    transform: none;
-                                                    transform-origin: center;
-                                                }
-
-                                                @keyframes check {
-                                                    from {
-                                                        stroke-dasharray: 0, 75px;
-                                                    }
-                                                    to {
-                                                        stroke-dasharray: 75px, 75px;
-                                                    }
-                                                }
-
-                                                #check {
-                                                    animation: .34s cubic-bezier(0.65, 0, 1, 1) .8s forwards check;
-                                                    stroke-dasharray: 0, 75px;
-                                                }
-
-                                                @keyframes check-group {
-                                                    from {
-                                                        transform: scale(1);
-                                                    }
-
-                                                    50% {
-                                                        transform: scale(1.09);
-                                                    }
-
-                                                    to {
-                                                        transform: scale(1);
-                                                    }
-                                                }
-
-                                                #check-group {
-                                                    animation: .1s ease-in-out .53s check-group;
-                                                    transform-origin: center;
-                                                }
-                                            </style>
                                         </a>
-                                        <a class="btn-flip _flip" href="javascript:void(0)"><i
-                                                class="sprite sprite-pt sprite-icCardRotation"></i></a>
+                                        <a class="btn-flip _flip" href="javascript:void(0)"><i class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
                                 </div>
                                 <div class="back">
