--- a/cgv_phototicket/WebContent/pub/Phototicket_printed_completed.html
+++ b/cgv_phototicket/WebContent/pub/Phototicket_printed_completed.html
@@ -104,10 +104,16 @@
                                     <div class="inner">
                                         <img src="../images/phototicket/main/sample.png"
                                              alt="">
-                                        <label>
-                                            <input value="1" name="group1" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
@@ -133,10 +139,16 @@
                                             <p class="lg">CURTUREPLEX CGV</p>
                                             <p class="sm">© CJ CGV. All rights reserved.</p>
                                         </div>
-                                        <label>
-                                            <input value="1" name="group1" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
@@ -152,10 +164,16 @@
                                     <div class="inner">
                                         <img src="../images/phototicket/main/sample.png"
                                              alt="">
-                                        <label>
-                                            <input value="1" name="group2" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
@@ -181,10 +199,16 @@
                                             <p class="lg">CURTUREPLEX CGV</p>
                                             <p class="sm">© CJ CGV. All rights reserved.</p>
                                         </div>
-                                        <label>
-                                            <input value="1" name="group2" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
@@ -200,10 +224,16 @@
                                     <div class="inner">
                                         <img src="../images/phototicket/main/sample.png"
                                              alt="">
-                                        <label>
-                                            <input value="1" name="group3" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
@@ -229,10 +259,16 @@
                                             <p class="lg">CURTUREPLEX CGV</p>
                                             <p class="sm">© CJ CGV. All rights reserved.</p>
                                         </div>
-                                        <label>
-                                            <input value="1" name="group3" type='checkbox'/>
-                                            <span></span>
-                                        </label>
+                                        <a href="javascript:void(0)" class="btn-toggle">
+                                            <svg width="46px" height="46px" viewBox="0 0 133 133" xmlns="http://www.w3.org/2000/svg">
+                                                <g id="check-group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                    <circle class="filled-circle" fill="#fb4357" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <circle class="white-circle" fill="#FFFFFF" cx="66.5" cy="66.5" r="55.5"></circle>
+                                                    <circle class="outline" stroke-width="4" cx="66.5" cy="66.5" r="54.5"></circle>
+                                                    <polyline class="check" stroke-width="4" points="41 70 56 85 92 49"></polyline>
+                                                </g>
+                                            </svg>
+                                        </a>
                                         <a class="btn-flip _flip" href="javascript:void(0)"><i
                                                 class="sprite sprite-pt sprite-icCardRotation"></i></a>
                                     </div>
